Infra/modules/security-groups/main.tf
variable "vpc_id" {}

resource "aws_security_group" "jenkins" {
    vpc_id = var.vpc_id

    ingress {
        from_port  = 8080
        to_port    = 8080 
        protocol   = "tcp"
        cidr_block = ["0.0.0.0/0"]
    }

    ingress {
        from_port  = 22
        to_port    = 22
        protocol   = "tcp"
        cidr_block = ["0.0.0.0/0"]
    }

    egress {
        from_port  = 0 
        to_port    = 0 
        protocol   = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
